# credit-card-churn-scoring

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
data/: README.md
data/interim/: churn_base.parquet  churn_base.parquet.dvc
data/processed/: churn_validated.parquet.dvc
models/: churn_mlp_state_dict.pt.dvc  gradient_boosting_tuned_pipeline.joblib.dvc  pytorch_preprocessor.joblib.dvc
notebooks/: 02_pipeline_scikit_learn.ipynb  03_validation_tracking_churn.ipynb  04_pytorch_autograd_mlp.ipynb
scripts/: build_churn_base.py  download_data.sh  train_pytorch_churn_model.py
src/churn_scoring/: __init__.py  config.py
src/churn_scoring/app/: inference.py  streamlit_app.py
src/churn_scoring/data/: loader.py  validation.py
src/churn_scoring/evaluation/: metrics.py
src/churn_scoring/features/: engineering.py
src/churn_scoring/models/: base.py  factory.py  sklearn_model.py  torch_model.py
src/churn_scoring/utils/: logging.py
tests/: test_app_inference.py  test_feature_engineering.py  test_loader.py  test_metrics.py  test_model_factory.py  test_project_structure.py  test_sklearn_model.py  test_torch_model.py  test_validation.py
