[project]
name = "credit-card-churn-scoring"
version = "0.1.0"
description = "ML pipeline end-to-end para scoring de churn de clientes de tarjeta de crédito."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "matplotlib>=3.8,<4.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "pandera>=0.20,<1.0",
    "mlflow>=2.12,<4.0",
    "joblib>=1.4,<2.0",
    "streamlit>=1.35,<2.0",
    "torch>=2.3,<3.0",
    "dvc>=3.50,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.7,<5.0",
    "ipykernel>=6.29,<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/churn_scoring"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src/churn_scoring --cov-report=term-missing"
